engine/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_remote.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 50
expression: "render_bottom_popup(&chat, 110)"
---
  Update Model Permissions

› 1. Ask for approval (current)  Hexa Engine can read and edit files in the current workspace, and run commands.
                                 Approval is required to access the internet or edit other files.
     Approve for me (disabled)   Only ask for actions detected as potentially unsafe. (disabled: Disabled by
                                 requirements.)
     Full Access (disabled)      Hexa Engine can edit files outside this workspace and access the internet without
                                 asking for approval. Exercise caution when using. (disabled: Disabled by
                                 requirements.)
     Read Only (disabled)        Hexa Engine can read files in the current workspace. Approval is required to edit
                                 files or access the internet. (disabled: Disabled by requirements.)
     server-only (disabled)      Description from the connected server. (disabled: Selecting custom profiles
                                 from a remote server is not supported yet.)

  Press enter to confirm or esc to go back
